# A-Pair-Of-Squares

./: .gitignore  APairOfSquares.cpp  APairOfSquares.hpp  APoS_Launcher_Linux.sh  Assets.yml  AudioManager.cpp  AudioManager.hpp  Bezier.cpp  Bezier.hpp  Button.cpp  Button.hpp  CMakeLists.txt  CMakeLists_old.txt  CMakeSettings.json  Colour.cpp  Colour.hpp  Constants.cpp  Constants.hpp  Door.cpp  Door.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  JSONManager.cpp  JSONManager.hpp  LICENSE  LevelManager.cpp  LevelManager.hpp  Orb.cpp  Orb.hpp  ParticleManager.cpp  ParticleManager.hpp  Player.cpp  Player.hpp  README.md  Spike.cpp  Spike.hpp  (+21 more)
.github/workflows/: build.yml
SDL2/: sdl2-config.cmake  sdl2_image-config.cmake
assets/: level0.tmx  level1.tmx  level10.tmx  level2.tmx  level3.tmx  level4.tmx  level5.tmx  level6.tmx  level7.tmx  level8.tmx  level9.tmx  save_data.json  spritesheet.tsx  test.tmx
